--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.context-path=/travelToCanada/
 server.port=7799
 spring.datasource.url=jdbc:mysql://localhost:3306/travelToCanada
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=mysql
+spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql = true
